[gd_scene load_steps=22 format=3 uid="uid://dfgj0lwfe2elm"]

[ext_resource type="Script" path="res://Main/jogo.gd" id="1_pukle"]
[ext_resource type="PackedScene" uid="uid://ckxjoth8tom2t" path="res://Main/Player/player.tscn" id="1_wq4xo"]
[ext_resource type="PackedScene" uid="uid://bkls4hu3uydv" path="res://Main/Player/Bola.tscn" id="2_h4ylc"]
[ext_resource type="LabelSettings" uid="uid://bf2y2qmvfkjj3" path="res://Main/FonteTela.tres" id="4_g3kj7"]
[ext_resource type="Script" path="res://Main/TelaDoJogo.gd" id="4_kxv83"]
[ext_resource type="Script" path="res://Main/Telas.gd" id="6_4wghm"]
[ext_resource type="PackedScene" uid="uid://xhxmyfvoon4g" path="res://Main/Poderes/AreaSpawnPoderes.tscn" id="7_u86i4"]
[ext_resource type="Script" path="res://Main/Login.gd" id="9_f5b6f"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wtt2e"]
albedo_color = Color(0.0923971, 0.0923971, 0.0923971, 1)

[sub_resource type="BoxMesh" id="BoxMesh_keton"]
material = SubResource("StandardMaterial3D_wtt2e")
size = Vector3(50, 1, 25)

[sub_resource type="Sky" id="Sky_arn6k"]

[sub_resource type="Environment" id="Environment_y2ic7"]
background_mode = 2
sky = SubResource("Sky_arn6k")
ambient_light_source = 3

[sub_resource type="BoxShape3D" id="BoxShape3D_byjv2"]
size = Vector3(49.9646, 2.37488, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_m7kdu"]
size = Vector3(49.965, 2.375, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ldk4a"]
size = Vector3(2.65869, 3.21777, 25.9615)

[sub_resource type="LabelSettings" id="LabelSettings_nfxjm"]
font_size = 102

[sub_resource type="LabelSettings" id="LabelSettings_pxdr8"]
font_size = 102

[sub_resource type="LabelSettings" id="LabelSettings_d2w5k"]
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_ohm7h"]
font_size = 36

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w1r1"]
bg_color = Color(0.296546, 0.651029, 0.775134, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eotil"]
bg_color = Color(0.658824, 0.694118, 0.87451, 1)

[node name="Jogo" type="Node3D" node_paths=PackedStringArray("bola", "marcador", "player1", "player2", "gol_player1", "gol_player2", "spawner_de_poder")]
script = ExtResource("1_pukle")
bola = NodePath("Bola")
marcador = NodePath("PosicaoInicial")
player1 = NodePath("Player")
player2 = NodePath("Player2")
gol_player1 = NodePath("GolPlayer1")
gol_player2 = NodePath("GolPlayer2")
spawner_de_poder = NodePath("AreaSpawnPoderes")

[node name="PlanoDeFundo" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.63221, 0)
mesh = SubResource("BoxMesh_keton")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.604599, 0.79653, 0, -0.79653, 0.604599, 0, 18, 18)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_y2ic7")

[node name="Player2" parent="." instance=ExtResource("1_wq4xo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.7836, 0, 0)

[node name="Player" parent="." instance=ExtResource("1_wq4xo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.1696, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0181853, 0.999835, 0, -0.999835, 0.0181853, -0.267069, 11.0118, 0.0244343)
shadow_enabled = true
directional_shadow_mode = 0

[node name="ParedeBaixo" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.705594, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParedeBaixo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.012558, -0.410165, 13.0134)
shape = SubResource("BoxShape3D_byjv2")

[node name="ParedeTopo" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.512813, 0.705594, -26.0102)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParedeTopo"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.684937, -0.410165, 13.0134)
shape = SubResource("BoxShape3D_m7kdu")

[node name="Bola" parent="." instance=ExtResource("2_h4ylc")]
visible = false

[node name="GolPlayer1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.58, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GolPlayer1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.829346, 0.512472, -0.0332813)
shape = SubResource("BoxShape3D_ldk4a")

[node name="GolPlayer2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.2462, 0, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GolPlayer2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.829346, 0.512472, -0.0332813)
shape = SubResource("BoxShape3D_ldk4a")

[node name="PosicaoInicial" type="Marker3D" parent="."]

[node name="AreaSpawnPoderes" parent="." node_paths=PackedStringArray("node_spawnar") instance=ExtResource("7_u86i4")]
node_spawnar = NodePath("..")

[node name="Telas" type="CanvasLayer" parent="." node_paths=PackedStringArray("placar", "tela_principal", "tela_login", "game")]
process_mode = 3
script = ExtResource("6_4wghm")
placar = NodePath("Placar")
tela_principal = NodePath("Principal")
tela_login = NodePath("Login")
game = NodePath("..")

[node name="Placar" type="MarginContainer" parent="Telas" node_paths=PackedStringArray("placar_player_1", "placar_player_2", "texto_vencedor")]
process_mode = 1
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 55
theme_override_constants/margin_bottom = 55
script = ExtResource("4_kxv83")
placar_player_1 = NodePath("Player1")
placar_player_2 = NodePath("Player2")
texto_vencedor = NodePath("Vencedor")

[node name="Player1" type="Label" parent="Telas/Placar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_nfxjm")

[node name="Player2" type="Label" parent="Telas/Placar"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_pxdr8")

[node name="Vencedor" type="Label" parent="Telas/Placar"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = ExtResource("4_g3kj7")

[node name="Principal" type="MarginContainer" parent="Telas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Telas/Principal"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="Telas/Principal/VBoxContainer"]
layout_mode = 2
text = "PONG"
label_settings = SubResource("LabelSettings_d2w5k")
horizontal_alignment = 1

[node name="Local" type="Button" parent="Telas/Principal/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Local"

[node name="Multiplayer" type="Button" parent="Telas/Principal/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Multiplayer"

[node name="Login" type="MarginContainer" parent="Telas" node_paths=PackedStringArray("ip", "port", "nickname")]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_f5b6f")
ip = NodePath("VBoxContainer/ServerInfoField/Ip")
port = NodePath("VBoxContainer/ServerInfoField/Port")
nickname = NodePath("VBoxContainer/NicknameField/Nickname")

[node name="VBoxContainer" type="VBoxContainer" parent="Telas/Login"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="NicknameField" type="HBoxContainer" parent="Telas/Login/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="NicknameLabel" type="Label" parent="Telas/Login/VBoxContainer/NicknameField"]
layout_mode = 2
text = "Nickname:"
label_settings = SubResource("LabelSettings_ohm7h")
horizontal_alignment = 1

[node name="Nickname" type="TextEdit" parent="Telas/Login/VBoxContainer/NicknameField"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "guar√°"
scroll_fit_content_height = true

[node name="ServerInfoField" type="HBoxContainer" parent="Telas/Login/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="IpLabel" type="Label" parent="Telas/Login/VBoxContainer/ServerInfoField"]
layout_mode = 2
text = "IP:"
label_settings = SubResource("LabelSettings_ohm7h")
horizontal_alignment = 1

[node name="Ip" type="TextEdit" parent="Telas/Login/VBoxContainer/ServerInfoField"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "localhost"
scroll_fit_content_height = true

[node name="PortLabel" type="Label" parent="Telas/Login/VBoxContainer/ServerInfoField"]
layout_mode = 2
text = "Porta:"
label_settings = SubResource("LabelSettings_ohm7h")
horizontal_alignment = 1

[node name="Port" type="TextEdit" parent="Telas/Login/VBoxContainer/ServerInfoField"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "5000"
scroll_fit_content_height = true

[node name="Buttons" type="HBoxContainer" parent="Telas/Login/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25

[node name="CriarServer" type="Button" parent="Telas/Login/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_2w1r1")
text = "Criar Server"

[node name="Logar" type="Button" parent="Telas/Login/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_eotil")
text = "Logar"

[connection signal="body_entered" from="GolPlayer1" to="." method="_on_gol_player_1_body_entered"]
[connection signal="body_entered" from="GolPlayer1" to="Telas/Placar" method="_on_gol_player_1_body_entered"]
[connection signal="body_entered" from="GolPlayer2" to="." method="_on_gol_player_2_body_entered"]
[connection signal="body_entered" from="GolPlayer2" to="Telas/Placar" method="_on_gol_player_2_body_entered"]
[connection signal="pressed" from="Telas/Principal/VBoxContainer/Local" to="Telas" method="_on_local_pressed"]
[connection signal="pressed" from="Telas/Principal/VBoxContainer/Multiplayer" to="Telas" method="_on_multiplayer_pressed"]
[connection signal="criar_server" from="Telas/Login" to="Telas" method="_on_login_criar_server"]
[connection signal="logar" from="Telas/Login" to="Telas" method="_on_login_logar"]
[connection signal="pressed" from="Telas/Login/VBoxContainer/Buttons/CriarServer" to="Telas/Login" method="_on_criar_server_pressed"]
[connection signal="pressed" from="Telas/Login/VBoxContainer/Buttons/Logar" to="Telas/Login" method="_on_logar_pressed"]
